--- a/docker/webserver/nginx.conf
+++ b/docker/webserver/nginx.conf
@@ -1,24 +1,23 @@
 server {
-    listen 80 default;
+    listen 80;
     root /application/public;
-    client_max_body_size 108M;
-    index index.html index.php;
-    access_log /var/log/nginx/application.access.log;
+    index index.html index.htm index.php;
+    server_name webserver;
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/ /index.php?$is_args$args;
     }
 
     location ~ \.php$ {
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
         include fastcgi_params;
     }
 
+    #TODO: fix this conf
     location /checker/ {
         proxy_redirect off;
         proxy_set_header HOST $http_host;
