--- a/main/.env.example
+++ b/main/.env.example
@@ -13,8 +13,9 @@ BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
 QUEUE_CONNECTION=redis
 
-SESSION_DRIVER=file
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
+SESSION_CONNECTION=session
 
 REDIS_HOST=redis
 
