--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
-version: '3.1'
+version: '3.3'
 
 services:
   webserver:
     image: nginx:alpine
     container_name: webserver
     volumes:
-      - ./main:/var/application
-      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./main:/application
+      - ./docker/webserver/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - ${NGINX_PORT}:80
     links:
       - phoenix
+      - php-fpm
     depends_on:
       - php-fpm
 
@@ -22,12 +23,12 @@ services:
       - ./main:/application
       - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.3/fpm/conf.d/99-overrides.ini
     environment:
-      - DB_PORT:${MYSQL_PORT}
+      - DB_PORT=${MYSQL_PORT}
       - DB_USERNAME=${MYSQL_USER}
       - DB_DATABASE=${MYSQL_DATABASE}
       - DB_PASSWORD=${MYSQL_PASSWORD}
-      - REDIS_PORT:${REDIS_PORT}
-      - REDIS_PASSWORD:${REDIS_PASSWORD}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     depends_on:
       - mysql
       - redis
@@ -44,8 +45,8 @@ services:
       - redis
 
   redis:
-    container_name: redis
     image: bitnami/redis:latest
+    container_name: redis
     command: redis-server --requirepass ${REDIS_PASSWORD}
     ports:
       - ${REDIS_PORT}:6379
@@ -53,38 +54,34 @@ services:
   queue:
     build: docker/queue
     container_name: queue
-    working_dir: /application
-    tty: true
     volumes:
       - ./main:/application
     environment:
-      - DB_PORT:${MYSQL_PORT}
+      - DB_PORT=${MYSQL_PORT}
       - DB_USERNAME=${MYSQL_USER}
       - DB_DATABASE=${MYSQL_DATABASE}
       - DB_PASSWORD=${MYSQL_PASSWORD}
-      - REDIS_PORT:${REDIS_PORT}
-      - REDIS_PASSWORD:${REDIS_PASSWORD}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     depends_on:
       - redis
       - mysql
 
   scheduler:
-    image: phpdockerio/php73-cli:latest
+    build: docker/scheduler
     container_name: scheduler
-    working_dir: /application
     command: sh /usr/bin/entrypoint.sh
-    restart: unless-stopped
-    tty: true
+    restart: unless-stopped 
     volumes:
       - ./main:/application
       - ./docker/scheduler/entrypoint.sh:/usr/bin/entrypoint.sh
     environment:
-      - DB_PORT:${MYSQL_PORT}
+      - DB_PORT=${MYSQL_PORT}
       - DB_USERNAME=${MYSQL_USER}
       - DB_DATABASE=${MYSQL_DATABASE}
       - DB_PASSWORD=${MYSQL_PASSWORD}
-      - REDIS_PORT:${REDIS_PORT}
-      - REDIS_PASSWORD:${REDIS_PASSWORD}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     depends_on:
       - redis
       - mysql
@@ -93,7 +90,8 @@ services:
     image: mysql:latest
     container_name: mysql
     restart: unless-stopped
-    tty: true
+    command:
+      - "--default-authentication-plugin=mysql_native_password"
     ports:
       - ${MYSQL_PORT}:3306
     environment:
