--- a/main/.gitignore
+++ b/main/.gitignore
@@ -9,3 +9,12 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+GPATH
+GRTAGS
+GTAGS
+.ac-php-conf.json
+package-lock.json
+/public/js
+/public/css
+/public/mix-manifest.json
+composer.lock
