--- a/docker/webserver/nginx.conf
+++ b/docker/webserver/nginx.conf
@@ -17,8 +17,7 @@ server {
         include fastcgi_params;
     }
 
-    #TODO: fix this conf
-    location /checker/ {
+    location ^~ /checker {
         proxy_redirect off;
         proxy_set_header HOST $http_host;
         proxy_set_header X-Original-Host $http_host;
