--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
-NGINX_PORT=8000
+NGINX_PORT=80
+NGINX_SSL_PORT=443
 
-MYSQL_PORT=3306
 MYSQL_USER=checker
 MYSQL_DATABASE=checker
 MYSQL_PASSWORD=password
+MYSQL_TIME_ZONE=Europe/Kiev
 MYSQL_ROOT_PASSWORD=root_password
 
-REDIS_PORT=6379
 REDIS_PASSWORD=password
+
+ECHO_SERVER_PORT=6001
