--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,13 @@ version: '3.3'
 services:
   webserver:
     image: nginx:alpine
-    container_name: webserver
+    container_name: checker-webserver
     volumes:
       - ./main:/application
       - ./docker/webserver/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - ${NGINX_PORT}:80
+      - ${NGINX_SSL_PORT}:443
     links:
       - phoenix
       - php-fpm
@@ -17,84 +18,101 @@ services:
 
   php-fpm:
     build: docker/php-fpm
-    container_name: php-fpm
+    container_name: checker-php-fpm
     working_dir: /application
     volumes:
       - ./main:/application
       - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.3/fpm/conf.d/99-overrides.ini
     environment:
-      - DB_PORT=${MYSQL_PORT}
       - DB_USERNAME=${MYSQL_USER}
       - DB_DATABASE=${MYSQL_DATABASE}
       - DB_PASSWORD=${MYSQL_PASSWORD}
-      - REDIS_PORT=${REDIS_PORT}
       - REDIS_PASSWORD=${REDIS_PASSWORD}
+    links:
+      - mysql
+      - redis
     depends_on:
       - mysql
       - redis
 
   phoenix:
     build: docker/phoenix
-    container_name: phoenix
+    container_name: checker-phoenix
     volumes:
       - ./phoenix:/application
     environment:
-      - REDIS_PORT=${REDIS_PORT}
       - REDIS_PASSWORD=${REDIS_PASSWORD}
+    links:
+      - redis
+    depends_on:
+      - redis
+
+  echo-server:
+    build: docker/echo-server
+    container_name: checker-echo-server
+    volumes:
+      - ./main:/application
+      - ./docker/echo-server/config.json:/application/laravel-echo-server.json
+    restart: unless-stopped
+    ports:
+      - ${ECHO_SERVER_PORT}:6001
+    links:
+      - redis
     depends_on:
       - redis
 
   redis:
     image: bitnami/redis:latest
-    container_name: redis
+    container_name: checker-redis
     command: redis-server --requirepass ${REDIS_PASSWORD}
-    ports:
-      - ${REDIS_PORT}:6379
 
   queue:
     build: docker/queue
-    container_name: queue
+    container_name: checker-queue
     volumes:
       - ./main:/application
+      - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.3/fpm/conf.d/99-overrides.ini
     environment:
-      - DB_PORT=${MYSQL_PORT}
       - DB_USERNAME=${MYSQL_USER}
       - DB_DATABASE=${MYSQL_DATABASE}
       - DB_PASSWORD=${MYSQL_PASSWORD}
-      - REDIS_PORT=${REDIS_PORT}
       - REDIS_PASSWORD=${REDIS_PASSWORD}
+    links:
+      - redis
+      - mysql
     depends_on:
       - redis
       - mysql
 
   scheduler:
     build: docker/scheduler
-    container_name: scheduler
+    container_name: checker-scheduler
     command: sh /usr/bin/entrypoint.sh
     restart: unless-stopped 
     volumes:
       - ./main:/application
       - ./docker/scheduler/entrypoint.sh:/usr/bin/entrypoint.sh
+      - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.3/fpm/conf.d/99-overrides.ini
     environment:
-      - DB_PORT=${MYSQL_PORT}
       - DB_USERNAME=${MYSQL_USER}
       - DB_DATABASE=${MYSQL_DATABASE}
       - DB_PASSWORD=${MYSQL_PASSWORD}
-      - REDIS_PORT=${REDIS_PORT}
       - REDIS_PASSWORD=${REDIS_PASSWORD}
+    links:
+      - redis
+      - mysql
     depends_on:
       - redis
       - mysql
 
   mysql:
     image: mysql:latest
-    container_name: mysql
+    container_name: checker-mysql
     restart: unless-stopped
     command:
       - "--default-authentication-plugin=mysql_native_password"
-    ports:
-      - ${MYSQL_PORT}:3306
     environment:
+      - TZ=${MYSQL_TIME_ZONE}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
