--- a/main/package.json
+++ b/main/package.json
@@ -12,15 +12,23 @@
     "devDependencies": {
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
+        "bootstrap-vue": "^2.0.0-rc.18",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
+        "pug": "^2.0.3",
+        "pug-plain-loader": "^1.0.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
+        "vee-validate": "^2.2.2",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "sweetalert": "^2.1.2",
+        "vue-toasted": "^1.1.26"
     }
 }
