--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: checker-webserver
     volumes:
       - ./main:/application
-      - ./docker/webserver/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/webserver:/etc/nginx/conf.d
     ports:
       - ${NGINX_PORT}:80
       - ${NGINX_SSL_PORT}:443
@@ -22,7 +22,8 @@ services:
     working_dir: /application
     volumes:
       - ./main:/application
-      - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.3/fpm/conf.d/99-overrides.ini
+      - ./docker/php-fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf
+      - ./docker/php-fpm/php-ini-overrides.ini:/usr/local/etc/php/php.ini
     environment:
       - DB_USERNAME=${MYSQL_USER}
       - DB_DATABASE=${MYSQL_DATABASE}
@@ -71,7 +72,8 @@ services:
     container_name: checker-queue
     volumes:
       - ./main:/application
-      - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.3/fpm/conf.d/99-overrides.ini
+      - ./docker/queue/php-ini-overrides.ini:/usr/local/etc/php/php.ini
+      - ./docker/queue/supervisord.conf:/etc/supervisor/conf.d/application.conf
     environment:
       - DB_USERNAME=${MYSQL_USER}
       - DB_DATABASE=${MYSQL_DATABASE}
@@ -92,7 +94,7 @@ services:
     volumes:
       - ./main:/application
       - ./docker/scheduler/entrypoint.sh:/usr/bin/entrypoint.sh
-      - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.3/fpm/conf.d/99-overrides.ini
+      - ./docker/scheduler/php-ini-overrides.ini:/usr/local/etc/php/php.ini
     environment:
       - DB_USERNAME=${MYSQL_USER}
       - DB_DATABASE=${MYSQL_DATABASE}
