--- a/docker/echo-server/config.json
+++ b/docker/echo-server/config.json
@@ -1,5 +1,5 @@
 {
-	"authHost": "http://localhost:8000",
+	"authHost": "http://webserver",
 	"authEndpoint": "/broadcasting/auth",
 	"clients": [],
 	"database": "redis",
