--- a/docker/webserver/application.conf
+++ b/docker/webserver/application.conf
@@ -1,8 +1,8 @@
 server {
-    listen 80;
+    listen 80 default_server;
+    listen [::]:80 default_server;
     root /application/public;
     index index.html index.htm index.php;
-    server_name webserver;
 
     location / {
         try_files $uri $uri/ /index.php?$is_args$args;
