--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   webserver:
     image: nginx:alpine
     container_name: checker-webserver
+    restart: unless-stopped
     volumes:
       - ./main:/application
       - ./docker/webserver:/etc/nginx/conf.d
@@ -20,6 +21,7 @@ services:
     build: docker/php-fpm
     container_name: checker-php-fpm
     working_dir: /application
+    restart: unless-stopped
     volumes:
       - ./main:/application
       - ./docker/php-fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf
@@ -39,6 +41,7 @@ services:
   phoenix:
     build: docker/phoenix
     container_name: checker-phoenix
+    restart: unless-stopped
     volumes:
       - ./phoenix:/application
     environment:
@@ -65,11 +68,13 @@ services:
   redis:
     image: bitnami/redis:latest
     container_name: checker-redis
+    restart: unless-stopped
     command: redis-server --requirepass ${REDIS_PASSWORD}
 
   queue:
     build: docker/queue
     container_name: checker-queue
+    restart: unless-stopped
     volumes:
       - ./main:/application
       - ./docker/queue/php-ini-overrides.ini:/usr/local/etc/php/php.ini
