--- a/main/package.json
+++ b/main/package.json
@@ -26,7 +26,10 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.4.5",
+    "babel-runtime": "^6.26.0",
     "sweetalert2": "^8.9.0",
+    "vue-froala-wysiwyg": "^3.0.0-rc.1",
     "vue-sidebar-menu": "^3.7.0",
     "vue-toasted": "^1.1.26"
   }
