--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     restart: unless-stopped
     volumes:
       - ./main:/application
-      - ./docker/webserver:/etc/nginx/conf.d
+      - ./docker/webserver/conf:/etc/nginx/conf.d
+      - ./docker/webserver/logs:/var/log/nginx/checker
     ports:
       - ${NGINX_PORT}:80
       - ${NGINX_SSL_PORT}:443
