--- a/docker/webserver/conf/application.conf
+++ b/docker/webserver/conf/application.conf
@@ -4,6 +4,9 @@ server {
     root /application/public;
     index index.html index.htm index.php;
 
+    access_log /var/log/nginx/checker/access.log;
+    error_log /var/log/nginx/checker/error.log;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
