phoenix docker fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
     build: docker/phoenix
     container_name: checker-phoenix
     restart: unless-stopped
+    command: mix phx.server
     volumes:
       - ./phoenix:/application
     environment:
