--- a/docker/phoenix/Dockerfile
+++ b/docker/phoenix/Dockerfile
@@ -1,9 +1,11 @@
-FROM elixir:1.8.1
-
-RUN mix local.hex --force
-
-RUN mix archive.install --force hex phx_new 1.4.3
+FROM elixir:1.8.2
 
 WORKDIR /application
 
-CMD ["mix", "phx.server"]
+RUN mix local.hex --force && \
+    mix local.rebar --force && \
+    mix hex.info
+
+EXPOSE 4000
+
+RUN mix archive.install --force hex phx_new 1.4.8
